* Exclude Dto's from DI * Add .gitignore * Add support for symfony 5

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -9,4 +9,4 @@ services:
 
     Mschlueter\Bundle\SonosApiBundle\:
         resource: '../../*'
-        exclude: '../../{DependencyInjection,Entity,Migrations,Tests}'
+        exclude: '../../**/{DependencyInjection,Dto,Entity,Migrations,Tests}'
